--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,11 @@ jobs:
         cd openwrt-sdk-23.05.4-aarch64-cortexa53_gcc-12.3.0_musl.Linux-x86_64
         make package/luci-app-smart-mini/compile V=s
 
-    - name: Upload IPK artifact
+    - name: Upload all IPKs
       uses: actions/upload-artifact@v4
       with:
         name: luci-app-smart-mini-ipk
-        path: openwrt-sdk-23.05.4-aarch64-cortexa53*/bin/packages/aarch64_cortex-a53/luci/luci-app-smart-mini*.ipk
+        path: |
+          openwrt-sdk-*/bin/packages/**/luci/luci-app-smart-mini*.ipk
+
 
