--- a/luci-app-smart-mini/Makefile
+++ b/luci-app-smart-mini/Makefile
@@ -5,9 +5,7 @@ PKG_VERSION:=1.0
 PKG_RELEASE:=1
 
 LUCI_TITLE:=硬盘健康监测
-LUCI_DESCRIPTION:=Show SMART info for disks with charts in LuCI
-LUCI_DEPENDS:=+smartmontools +luci-compat +luci-base +luci-mod-admin-full
-PKG_MAINTAINER:=YourName <youremail@example.com>
+LUCI_DEPENDS:=+luci +smartmontools
 PKG_LICENSE:=GPL-2.0
 
 include $(INCLUDE_DIR)/package.mk
@@ -22,7 +20,7 @@ define Package/luci-app-smart-mini
 endef
 
 define Package/luci-app-smart-mini/description
-  $(LUCI_DESCRIPTION)
+  一款基于smartmontools的硬盘健康监测LuCI插件，支持查看详细SMART信息。
 endef
 
 define Build/Compile
@@ -31,17 +29,9 @@ endef
 
 define Package/luci-app-smart-mini/install
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/controller
+	$(INSTALL_DIR) $(1)/usr/share/luci/menu.d
 	$(INSTALL_DATA) ./luasrc/controller/smartmini.lua $(1)/usr/lib/lua/luci/controller/smartmini.lua
-
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/ucode
-	$(INSTALL_DATA) ./ucode/smartmini.uc $(1)/usr/lib/lua/luci/ucode/smartmini.uc
-
-	$(INSTALL_DIR) $(1)/usr/share/luci-static/resources/view/smartmini
-	$(INSTALL_DATA) ./www/js/smartmini.js $(1)/usr/share/luci-static/resources/view/smartmini/smartmini.js
-
-	$(INSTALL_DIR) $(1)/usr/share/luci-i18n
-	$(INSTALL_DATA) ./i18n/zh-cn.po $(1)/usr/share/luci-i18n/luci-app-smart-mini-zh-cn.po
+	$(INSTALL_DATA) ./po/zh-cn.po $(1)/usr/share/luci/menu.d/luci-app-smart-mini.po
 endef
 
 $(eval $(call BuildPackage,luci-app-smart-mini))
-
